# taxsystem/api/filters.py
@@ -16,13 +16,11 @@ from taxsystem.api.helpers import core
 from taxsystem.api.helpers.icons import (
     get_filter_delete_button,
     get_filter_set_action_icons,
-    get_filter_set_active_icon,
 )
 from taxsystem.api.schema import (
     ActionCommentRequest,
     CreateFilterRequest,
     CreateFilterSetRequest,
-    DataTableSchema,
     ErrorSchema,
     FilterModelSchema,
     FilterSetModelSchema,
@@ -91,13 +89,12 @@ class FilterApiEndpoints:
                         description=filter_obj.filter_set.description,
                         enabled=filter_obj.filter_set.enabled,
                     ),
-                    filter_type=filter_obj.get_filter_type_display(),
-                    match_type=filter_obj.get_match_type_display(),
-                    value=DataTableSchema(
-                        raw=filter_obj.value,
-                        display=display,
-                        sort=str(filter_obj.value),
-                    ),
+                    filter_type=filter_obj.filter_type,
+                    filter_type_display=str(filter_obj.get_filter_type_display()),
+                    match_type=filter_obj.match_type,
+                    match_type_display=str(filter_obj.get_match_type_display()),
+                    value=str(filter_obj.value),
+                    value_display=display,
                     actions=get_filter_delete_button(filter_obj=filter_obj),
                 )
                 response_filter_list.append(response_filter)
@@ -209,11 +206,6 @@ class FilterApiEndpoints:
                     name=filter_set.name,
                     description=filter_set.description,
                     enabled=filter_set.enabled,
-                    status=DataTableSchema(
-                        raw=filter_set.enabled,
-                        display=get_filter_set_active_icon(filter_set=filter_set),
-                        sort=str(int(filter_set.enabled)),
-                    ),
                     actions=get_filter_set_action_icons(
                         request=request, filter_set=filter_set
                     ),
